# unlocked_embedder

./: README.md  example.py  profile_vram.py  pyproject.toml  try_fastembed.py
unlocked/: embedder.py
