[tool.poetry]
name = "unlocked-embedder"
version = "0.1.0"
description = ""
authors = ["conic <cncrlf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gputil = "^1.4.0"
psutil = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
